Overflow image and icon added

--- a/visibility.html
+++ b/visibility.html
@@ -23,7 +23,7 @@
 
         #box-3 {
             background-color: sienna;
-            display: none;
+            /* display: none; */
             /* visibility: hidden; */
         }
 
